v0.7 (Unreleased)
[I guess I'm still using it]
    -Added the following new functions:
        (general) hfssSetDesignSettings(...)
    -Added the possibility of plotting several graphs in one single report (hfssCreateReport).
    -Allow to have unitless variables in hfssSetVariable.
    -Allow to add units to string variables in hfssSetVariable.

v0.6 (20-September-2024)
[I don't know how long this will last]
    -Added the following new functions:
        (3dmodeler) hfssCleanUpModel(...)
        (3dmodeler) hfssEllipse(...)
        (general) hfssAssignPointVariable(...)
        (general) hfssEnableAutoSave(...)
    -Added support for arrays of single values in hfssSweepAnalysis.
    -Added support for SweepAlongVector in hfssPositionVariable.
    -Added gold as high conductivity material in hfssAssignMaterial.
    -Added support to DuplicateAlongLine in hfssAssignPositionVariable.
    -Added option to include material in hfssBox.
    -Added option to disable solve inside in hfssBox. Note: it doesn't work with vacuum as material.
    -Fix optional units argument in hfssEditSlave.
    -Fix rotation/move of one element when specified with a string.
    -Fix command path in hfssExecuteScript (thanks arwsl).
    -Fix fileparts output in hfssOpenProject.
    -Fix the number of decimal places in the sweep vector (hfssSweepAlongVector).
    -Remove warning when a file with extension .aedt is opened.
    -Warning display is optional in hfssAssignMaterial (enabled by default).
    -Improved documentation.

v0.5 (09-December-2020)
[What year is this?]
    -Added the following new functions:
        (boundary) hfssAssignImpedance(...) (thanks Rounak Singh Narde).
        (boundary) hfssEditFloquetPort(...)
        (boundary) hfssEditSlave(...)
        (analysis) hfssSweepAnalysis(...)
        (analysis) hfssSolveSweepAnalysis(...)
        (general)  hfssSetVariable(...) (thanks Rounak Singh Narde).
        (general)  hfssAssignSizeVariable(...)