@@ -29,6 +29,12 @@
 % ----------------------------------------------------------------------------
 
 % ----------------------------------------------------------------------------
+% CHANGELOG
+%
+% 18-Sep-2024: *Initial release.
+% ----------------------------------------------------------------------------
+
+% ----------------------------------------------------------------------------
 % Written by Daniel R. Prado
 % danysan@gmail.com / drprado.tsc@gmail.com
 % 18 September 2024
