@@ -1,6 +1,7 @@
 v0.7 (Unreleased)
 [I guess I'm still using it]
     -Added the following new functions:
+        (3dmodeler) hfssImportDXF(...) (thanks K1TCH)
         (general) hfssSetDesignSettings(...)
     -Added the possibility of plotting several graphs in one single report (hfssCreateReport).
     -Allow to have unitless variables in hfssSetVariable.
